--- a/metadata/com.samyak2403.emf_magneticfielddetector.yml
+++ b/metadata/com.samyak2403.emf_magneticfielddetector.yml
@@ -1,7 +1,7 @@
 Categories:
   - Science & Education
   - System
-License: GPL-3.0-or-later
+License: MIT
 AuthorName: Samyak Kamble
 SourceCode: https://github.com/samyak2403/EMFMagneticFieldDetector
 IssueTracker: https://github.com/samyak2403/EMFMagneticFieldDetector/issues
