--- a/metadata/com.samyak2403.emf_magneticfielddetector.yml
+++ b/metadata/com.samyak2403.emf_magneticfielddetector.yml
@@ -3,9 +3,11 @@ Categories:
   - System
 License: MIT
 AuthorName: Samyak Kamble
+AuthorEmail: samyak.kamble2403@gmail.com
+WebSite: https://github.com/samyak2403/EMFMagneticFieldDetector
 SourceCode: https://github.com/samyak2403/EMFMagneticFieldDetector
 IssueTracker: https://github.com/samyak2403/EMFMagneticFieldDetector/issues
-Changelog: https://github.com/samyak2403/EMFMagneticFieldDetector/releases
+Changelog: https://github.com/samyak2403/EMFMagneticFieldDetector/blob/main/CHANGELOG.md
 
 AutoName: EMF Magnetic Field Detector
 
@@ -24,3 +26,29 @@ AutoUpdateMode: Version
 UpdateCheckMode: Tags
 CurrentVersion: '1.0.0'
 CurrentVersionCode: 1
+
+Description: |
+  EMF Magnetic Field Detector is a professional-grade electromagnetic field detection tool that utilizes your device's magnetic sensor to measure EMF levels in your surroundings.
+
+  Features:
+  * Real-time EMF Detection with accurate measurements in microTesla (µT)
+  * Visual Speedometer Display for easy reading
+  * Background Scanning capability
+  * Material Design 3 UI for modern look and feel
+  * Clean and minimal interface
+  * Works completely offline
+  * No tracking or analytics
+  * Minimal permissions required
+
+  This app is perfect for:
+  * General EMF detection and measurement
+  * Finding sources of electromagnetic fields
+  * Educational purposes
+  * Basic EMF investigations
+
+RequiresRoot: No
+MaintainerNotes: |
+  * App uses Material Design 3
+  * Requires magnetic sensor
+  * Minimum SDK 24 (Android 7.0)
+  * Built with Jetpack Compose
