--- a/metadata/com.samyak2403.emf_magneticfielddetector.yml
+++ b/metadata/com.samyak2403.emf_magneticfielddetector.yml
@@ -21,7 +21,7 @@ Builds:
     subdir: app
     gradle:
       - yes
-    output: build/outputs/apk/release/app-release.apk
+    output: C:\Users\Samya\AndroidStudioProjects\EMFMagneticFieldDetector\app\release\EMF_Magnetic_Field_Detector v1.0.apk
     prebuild:
       - mkdir -p $HOME/.gradle
       - echo "org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError" > $HOME/.gradle/gradle.properties
