--- a/metadata/com.samyak2403.emf_magneticfielddetector.yml
+++ b/metadata/com.samyak2403.emf_magneticfielddetector.yml
@@ -6,7 +6,8 @@ SourceCode: https://github.com/samyak2403/EMFMagneticFieldDetector
 IssueTracker: https://github.com/samyak2403/EMFMagneticFieldDetector/issues
 Changelog: https://github.com/samyak2403/EMFMagneticFieldDetector/blob/main/CHANGELOG.md
 
-AutoName: EMF - Magnetic Field Detector
+AutoName: EMF Magnetic Field Detector
+
 Description: |
   A professional-grade EMF (Electromagnetic Field) detector app that uses your device's magnetic sensor to measure electromagnetic fields in your surroundings.
 
@@ -35,4 +36,3 @@ AutoUpdateMode: Version
 UpdateCheckMode: Tags
 CurrentVersion: 1.0.0
 CurrentVersionCode: 1
-
